output.css
/* ... */
.hover\:scale-\[100\.5\%\]:hover {
  --tw-scale-x: 100.5%;
  --tw-scale-y: 100.5%;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.hover\:scale-\[101\%\]:hover {
  --tw-scale-x: 101%;
  --tw-scale-y: 101%;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.hover\:bg-bg4:hover {
  --tw-bg-opacity: 1;
  background-color: rgb(40 0 136 / var(--tw-bg-opacity, 1));
}

.hover\:bg-indigo-500:hover {
  --tw-bg-opacity: 1;
  background-color: rgb(99 102 241 / var(--tw-bg-opacity, 1));
}

.hover\:text-\[32px\]:hover {
  font-size: 32px;
}

.hover\:font-bold:hover {
  font-weight: 700;
}

.hover\:underline:hover {
  text-decoration-line: underline;
}

.hover\:shadow-\[-3px_8px_10px_0_rgba\(255\2c 255\2c 255\2c 0\.08\)\2c 5px_-10px_10px_0_rgba\(0\2c 0\2c 0\2c 0\.08\)\]:hover {
  --tw-shadow: -3px 8px 10px 0 rgba(255,255,255,0.08),5px -10px 10px 0 rgba(0,0,0,0.08);
  --tw-shadow-colored: -3px 8px 10px 0 var(--tw-shadow-color), 5px -10px 10px 0 var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}

.focus\:outline:focus {
  outline-style: solid;
}

.focus\:outline-2:focus {
  outline-width: 2px;
}

.focus\:-outline-offset-2:focus {
  outline-offset: -2px;
}

.focus\:outline-indigo-600:focus {
  outline-color: #4f46e5;
}

.focus-visible\:outline:focus-visible {
  outline-style: solid;
}

.focus-visible\:outline-2:focus-visible {
  outline-width: 2px;
}

.focus-visible\:outline-offset-2:focus-visible {
  outline-offset: 2px;
}

.focus-visible\:outline-indigo-600:focus-visible {
  outline-color: #4f46e5;
}

.disabled\:border-gray-300:disabled {
  --tw-border-opacity: 1;
  border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
}

.disabled\:bg-gray-100:disabled {
  --tw-bg-opacity: 1;
  background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
}

.disabled\:checked\:bg-gray-100:checked:disabled {
  --tw-bg-opacity: 1;
  background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
}

.group:hover .group-hover\:underline {
  text-decoration-line: underline;
}

.group:has(:disabled) .group-has-\[\:disabled\]\:stroke-gray-950\/25 {
  stroke: rgb(3 7 18 / 0.25);
}

.group:has(:checked) .group-has-\[\:checked\]\:opacity-100 {
  opacity: 1;
}

.group:has(:indeterminate) .group-has-\[\:indeterminate\]\:opacity-100 {
  opacity: 1;
}

@media (min-width: 768px) {
  .md\:bottom-0 {
    bottom: 0px;
  }

  .md\:bottom-24 {
    bottom: 6rem;
  }

  .md\:bottom-32 {
    bottom: 8rem;
  }

  .md\:bottom-8 {
    bottom: 2rem;
  }

  .md\:left-10 {
    left: 2.5rem;
  }

  .md\:left-20 {
    left: 5rem;
  }

  .md\:left-72 {
    left: 18rem;
  }

  .md\:left-\[450px\] {
    left: 450px;
  }

  .md\:right-5 {
    right: 1.25rem;
  }

  .md\:right-60 {
    right: 15rem;
  }

  .md\:top-0 {
    top: 0px;
  }

  .md\:top-52 {
    top: 13rem;
  }

  .md\:col-span-2 {
    grid-column: span 2 / span 2;
  }

  .md\:col-span-3 {
    grid-column: span 3 / span 3;
  }

  .md\:col-span-4 {
    grid-column: span 4 / span 4;
  }

  .md\:col-span-8 {
    grid-column: span 8 / span 8;
  }

  .md\:col-start-7 {
    grid-column-start: 7;
  }

  .md\:ml-4 {
    margin-left: 1rem;
  }

  .md\:ml-5 {
    margin-left: 1.25rem;
  }

  .md\:mt-0 {
    margin-top: 0px;
  }

  .md\:mt-\[-20px\] {
    margin-top: -20px;
  }

  .md\:mt-\[-8px\] {
    margin-top: -8px;
  }

  .md\:mt-\[15px\] {
    margin-top: 15px;
  }

  .md\:flex {
    display: flex;
  }

  .md\:hidden {
    display: none;
  }

  .md\:h-\[600px\] {
    height: 600px;
  }

  .md\:h-\[60px\] {
    height: 60px;
  }

  .md\:w-\[130px\] {
    width: 130px;
  }

  .md\:max-w-\[30\%\] {
    max-width: 30%;
  }

  .md\:max-w-\[50\%\] {
    max-width: 50%;
  }

  .md\:grid-cols-2 {
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }

  .md\:grid-cols-8 {
    grid-template-columns: repeat(8, minmax(0, 1fr));
  }

  .md\:flex-row {
    flex-direction: row;
  }

  .md\:flex-nowrap {
    flex-wrap: nowrap;
  }

  .md\:border-b {
    border-bottom-width: 1px;
  }

  .md\:bg-transparent {
    background-color: transparent;
  }

  .md\:py-0 {
    padding-top: 0px;
    padding-bottom: 0px;
  }

  .md\:pl-3 {
    padding-left: 0.75rem;
  }

  .md\:pl-4 {
    padding-left: 1rem;
  }

  .md\:pl-6 {
    padding-left: 1.5rem;
  }

  .md\:pt-0 {
    padding-top: 0px;
  }

  .md\:pt-4 {
    padding-top: 1rem;
  }

  .md\:text-left {
    text-align: left;
  }

  .md\:text-2xl {
    font-size: 1.5rem;
    line-height: 2rem;
  }

  .md\:text-3xl {
    font-size: 1.875rem;
    line-height: 2.25rem;
  }

  .md\:text-5xl {
    font-size: 3rem;
    line-height: 1;
  }

  .md\:text-\[100px\] {
    font-size: 100px;
  }

  .md\:text-\[120px\] {
    font-size: 120px;
  }

  .md\:text-\[180px\] {
    font-size: 180px;
  }

  .md\:text-\[200px\] {
    font-size: 200px;
  }

  .md\:text-\[20px\] {
    font-size: 20px;
  }

  .md\:text-\[21px\] {
    font-size: 21px;
  }

  .md\:text-\[29px\] {
    font-size: 29px;
  }

  .md\:text-\[40px\] {
    font-size: 40px;
  }

  .md\:text-\[50px\] {
    font-size: 50px;
  }

  .md\:text-\[80px\] {
    font-size: 80px;
  }

  .md\:text-base {
    font-size: 1rem;
    line-height: 1.5rem;
  }

  .md\:text-lg {
    font-size: 1.125rem;
    line-height: 1.75rem;
  }

  .md\:text-xl {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }

  .md\:leading-none {
    line-height: 1;
  }

  .md\:hover\:text-\[21px\]:hover {
    font-size: 21px;
  }

  @media not all and (min-width: 1280px) {
    .md\:max-xl\:py-10 {
      padding-top: 2.5rem;
      padding-bottom: 2.5rem;
    }
  }
}
/* ... */

